# officeclaw

./: .dockerignore  .gitignore  CLAUDE.md  DESIGN.md  Makefile  README  README.md  compose.local.yml  compose.yml  pyproject.toml  pyrightconfig.json
api/: .env.example  .gitignore  Dockerfile  alembic.ini  pyproject.toml
api/migrations/: alembic.ini  env.py  script.py.mako
api/migrations/versions/: 0001_initial_schema.py  0002_workspace_slug.py  0003_workspace_token_not_null.py  0004_timezone_and_skill_evolution.py  0005_cron_and_heartbeat.py  0006_skill_frontmatter_columns.py  0007_agent_chat_messages.py  001_initial_schema.sql  002_add_officeclaw_token.sql  002_channels_name.sql  002_user_envs_category.sql  002_workspace_slug.sql  003_add_gateway_port.sql  003_agent_avatar_url.sql
api/src/: admin.py  config.py  main.py  mcp_server.py  vm_payload.py
api/src/db/: pool.py
api/src/entrypoint/: main.py  mcp.py
api/src/fleet/: di.py  router.py  service.py
api/src/identity/: di.py  router.py  service.py
api/src/integrations/: di.py  router.py  schema.py
api/src/knowledge/: di.py
api/src/models/: agent.py  agent_file.py  channel.py  env.py  mcp.py  skill.py  user.py
api/src/repositories/: agent_files.py  agents.py  channels.py  envs.py  links.py  mcp.py  skills.py  users.py
api/src/routers/: agents.py  channels.py  (+4 more)
api/tests/: conftest.py  test_admin.py  test_agent_files.py  test_agents.py  test_channels.py  test_crypto.py  test_envs.py  test_links.py  test_mcp_tools.py  test_runtime_files.py  test_sandbox.py  test_skills.py  test_users.py  test_vm_payload.py  test_workspaces.py
(+301 files in other folders)
