[project]
name = "api"
version = "0.1.0"
description = "OfficeClaw control plane API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "asyncpg>=0.30",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "alembic>=1.14",
    "cryptography>=43",
    "python-dotenv>=1.0",
    "fastmcp>=2.3",
    "python-multipart>=0.0.9",
    "lightrag-hku>=1.3",
    "openai>=1.0",
    "pgvector>=0.3",
    "httpx>=0.27",
    "aiobotocore>=2.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6",
    "ruff>=0.7",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
